// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeMe /> component renders array passed as prop 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hello
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders break line 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hello
      <br />
    </span>
    <span>
      there
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders children passed as array 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hello
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders children passed as string 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hello
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders multiple items passed as prop 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hellothere
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders string passed as prop 1`] = `
<div>
  <span
    class="tm"
  >
    <span>
      hello
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders with className as prop 1`] = `
<div>
  <span
    class="tm new"
  >
    <span>
      hello
    </span>
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;

exports[`<TypeMe /> component renders without crashing 1`] = `
<div>
  <span
    class="tm"
  >
    
    <span
      class="tm-cursor tm-blink"
    >
      |
    </span>
  </span>
</div>
`;
